# gbc-m4

./: Cargo.toml  README.md  build.rs  memory.x
atsamd51g19/: ATSAMD51G19A.svd  Cargo.toml
gbc-m4/: Cargo.toml
playground/: README.md  c2.py  code.py
src/: cart.rs  hid.rs  main.rs  spi.rs
src/cpu/: alu.rs  instructions.rs  mod.rs  opcode.rs  registers.rs  tests.rs
src/cpu/inner/: flag_register.rs  instructions.rs  memory_bus.rs  mod.rs  program_counter.rs  register.rs
src/io/: hid.rs  mod.rs  spi.rs
