[package]
name = "gbc-m4"
version = "0.1.0"
authors = ["Ech0riginal <samwatkins94@me.com>"]
edition = "2021"

[dependencies]
itsybitsy_m4 = { version = "0.7.0", features = ["default", "usb"] }
panic-halt = "0.2"

[dev-dependencies]
cortex-m = "0.7"
usbd-serial = "0.1"
panic-semihosting = "0.6"

[profile.dev]
overflow-checks=false
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
#overflow-checks=false
debug = true
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD51G19A"
